<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_version">Version1.0</string>
    <string name="version_name">1.0.1</string>
    <integer name="version_code">101</integer>
    <string name="app_long_name">勘验取证终端数据采集系统</string>
    <string name="hello">你好</string>
    <string name="first_short">first</string>
    <string name="first_long">小颜坏坏</string>
    <string name="second_short">second</string>
    <string name="three_3d">3d全景</string>
    <string name="second_long">3d全景</string>
    <string name="third_short">third</string>
    <string name="third_long">变成猪儿🐖</string>
    <string name="kyqz_task">"任务列表"</string>
    <string name="kyqz_case">"专项监督"</string>
    <string name="kyqz_clue">"线索管理"</string>
    <string name="kyqz_data">"检测数据"</string>
    <string name="kyqz_resource">"学习资料"</string>
    <string name="kyqz_me">"个人中心"</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_hint">请输入用户名</string>
    <string name="back">返回</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="app_name">知识库混合开发测试APP</string>

    <string name="if_home">&#xe8c6;</string>
    <string name="if_recommend">&#xe63f;</string>
    <string name="if_chat">&#xe63c;</string>
    <string name="if_profile">&#xe634;</string>
    <string name="wode">&#xe600;</string>
    <string name="knowledge">&#xe61d;</string>

    <string name="login_back">&#xe624;</string>

    <string name="home_others">&#xe662;</string>
    <string name="home_more">&#xe607;</string>


    <string name="if_category">&#xe600;</string>
    <string name="if_favorite">&#xe639;</string>
    <string name="if_favorite1">&#xe620;</string>

    <string name="if_unexpected">&#xe606;</string>
    <string name="if_unexpected1">&#xe692;</string>
    <string name="if_empty">&#xe601;</string>
    <string name="if_wifi_error">&#xe876;</string>
    <string name="if_wifi_error1">&#xe501;</string>
    <string name="if_back">&#xe607;</string>
    <string name="if_error_tips">&#xe648;</string>
    <string name="if_back_soild">&#xe680;</string>

    <string name="if_notify">&#xe654;</string>
    <string name="if_history">&#xe606;</string>
    <string name="if_address">&#xe603;</string>
    <string name="if_collection">&#xe604;</string>
    <string name="if_search">&#xe987;</string>
    <string name="if_clear">&#xe60b;</string>
    <string name="if_delete">&#xe60a;</string>
    <string name="if_empty1">&#xe637;</string>
    <string name="if_empty2">&#xe6cf;</string>
    <string name="if_empty3">&#xe60c;</string>
    <string name="if_history2">&#xe6d0;</string>
    <string name="if_notice_msg">&#xe609;</string>
    <string name="if_notice_recommend">&#xe608;</string>
    <string name="if_goods">&#xe6d1;</string>
    <string name="if_share">&#xe60d;</string>
    <string name="if_shop">&#xe895;</string>
    <string name="if_like">&#xe60e;</string>
    <string name="if_add">&#xe62b;</string>
    <string name="if_location">&#xe60f;</string>
    <string name="if_close">&#xe611;</string>
    <string name="if_checked">&#xe612;</string>
    <string name="if_checked2">&#xe62c;</string>
    <string name="if_right_arrow">&#xe669;</string>
    <string name="if_alipay">&#xe674;</string>
    <string name="if_wxpay">&#xe62d;</string>

    <string name="degrade_title">错误提示</string>
    <string name="degrade_tips">页面跑远了,开发小哥正在加急修复中...</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="input_item_title_user_name">用户名</string>
    <string name="input_item_hint_user_name">请输入用户名</string>
    <string name="login_desc_forget_pwd">提示：如果你忘记了密码，重新注册即可</string>
    <string name="input_item_desc_pwd">请输入密码</string>

    <string name="input_item_title_pwd">密码</string>
    <string name="login_success">登录成功</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="login_failed">登陆失败:</string>
    <string name="get_failed">获取失败:</string>
    <string name="input_item_title_course_order_id">课程订单号</string>
    <string name="input_item_hint_order_id">请输入课程的订单号后四位</string>
    <string name="action_submit">提交</string>
    <string name="input_item_title_moocid">账号ID</string>
    <string name="input_item_hint_moocid">请输入账号ID</string>
    <string name="input_item_hint_pwd">请输入密码</string>
    <string name="input_item_hint_pwd2">请再次输入密码</string>
    <string name="input_item_title_pwd2">确认密码</string>
    <string name="item_collection">&#xe61d;   我的收藏</string>
    <string name="item_notify">&#xe61d;  课程通知</string>
    <string name="item_history">&#xe61d;   浏览历史</string>
    <string name="item_update">&#xe61d;   版本更新</string>
    <string name="item_address">&#xe61d;   收货地址</string>
    <string name="profile_login_desc_welcome_back">Hi，欢迎回来</string>
    <string name="profile_not_login">请先登陆</string>
    <string name="profile_login_desc">解锁全部功能,畅享架构师专属福利</string>
    <string name="profile_tab_item_collection">\n收藏</string>
    <string name="profile_tab_item_history">\n历史浏览</string>
    <string name="profile_tab_item_learn">\n学习时长</string>
    <string name="home_search_hint">&#xe61d;  搜索</string>
    <string name="title_category">分类</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_login">compose渐变登录</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="button">按钮</string>
    <string name="floatButton">悬浮按钮</string>
    <string name="shopping">商场</string>
    <string name="big_house">楼宇</string>
    <string name="school">学校</string>
    <string name="houses">住宅区</string>
    <string name="search_key_word">请输入关键字</string>
    <string name="search">Search</string>
    <string name="setting">设置</string>
    <string name="edit">编辑资料</string>
    <string name="userInfo">个人信息</string>
    <string name="introduce">null</string>
    <string name="message_name">XiaoYan</string>
    <string name="tab_name">tab_name</string>
    <string name="settings">&#xe61d; 设置</string>
    <string name="agree">我已阅读并同意 "\"用户协议"\" 和 "\"隐私政策"\"</string>
    <string name="remember">记住密码</string>
    <string name="next">下一步</string>
    <string name="log_out">退出登录</string>
    <string name="all_right_reserved_by_nanputech_com">All Right Reserved By NanPuTech.com</string>
    <string name="commonly_use">常用</string>
    <string name="null_data">null</string>
    <string name="album">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="input_username">请输入用户名</string>
    <string name="please_input">请输入...</string>
    <string name="finish">完成</string>
    <string name="publish">发布</string>
    <string name="play_times">154万次播放</string>
    <string name="beautiful_scenes">美丽的极光</string>
    <string name="like">208次点赞</string>
    <string name="wan">万</string>
    <string name="tag">标签 水质 土壤</string>
    <string name="no_data">暂无数据</string>

</resources>