<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_long_name"
        android:textColor="@color/white"
        android:textSize="60px"
        android:gravity="center"
        app:layout_marginTopPercent="12%"
        />

    <Button
        android:id="@+id/button_task"
        app:layout_marginTopPercent="25%"
        app:layout_marginLeftPercent="8%"
        android:text="@string/kyqz_task"
        android:drawableLeft="@mipmap/icon_task"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        android:background="@mipmap/task"
        app:layout_heightPercent="18%"
        app:layout_widthPercent="40%"
        android:layout_height="15px"
        android:layout_width="40px"/>

    <Button
        android:id="@+id/button_case"
        android:text="@string/kyqz_case"
        android:drawableLeft="@mipmap/icon_case"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        android:background="@mipmap/ky_case"
        android:backgroundTintMode="multiply"
        app:layout_marginLeftPercent="52%"
        app:layout_marginRightPercent="8%"
        app:layout_marginTopPercent="25%"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="18%"
        android:layout_height="15px"
        android:layout_width="40px"
        />

    <Button
        android:id="@+id/button_clue"
        android:drawableLeft="@mipmap/icon_clue"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        app:layout_marginTopPercent="45%"
        app:layout_marginLeftPercent="8%"
        android:text="@string/kyqz_clue"
        android:background="@mipmap/clue"
        app:layout_heightPercent="18%"
        app:layout_widthPercent="40%"
        android:layout_height="15px"
        android:layout_width="40px"/>

    <Button
        android:id="@+id/button_data"
        android:drawableLeft="@mipmap/icon_data"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        app:layout_marginTopPercent="45%"
        app:layout_marginLeftPercent="52%"
        app:layout_marginRightPercent="8%"
        android:text="@string/kyqz_data"
        android:background="@mipmap/data"
        app:layout_heightPercent="18%"
        app:layout_widthPercent="40%"
        android:layout_height="15px"
        android:layout_width="40px"/>

    <Button
        android:id="@+id/button_resource"
        android:drawableLeft="@mipmap/icon_resource"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        android:text="@string/kyqz_resource"
        app:layout_marginTopPercent="65%"
        app:layout_marginLeftPercent="8%"
        app:layout_marginBottomPercent="18%"
        android:background="@mipmap/resource"
        app:layout_heightPercent="18%"
        app:layout_widthPercent="40%"
        android:layout_height="15px"
        android:layout_width="40px"/>

    <Button
        android:id="@+id/button_me"
        android:drawableLeft="@mipmap/icon_me"
        android:paddingLeft="30dp"
        android:textColor="@color/white"
        android:textSize="45px"
        android:text="@string/kyqz_me"
        android:background="@mipmap/me"
        app:layout_marginTopPercent="65%"
        app:layout_marginLeftPercent="52%"
        app:layout_marginRightPercent="8%"
        app:layout_marginBottomPercent="18%"
        app:layout_heightPercent="18%"
        app:layout_widthPercent="40%"
        android:layout_height="15px"
        android:layout_width="40px"/>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:gravity="center"
        app:layout_marginTopPercent="90%"
        android:textSize="30px"/>
</androidx.percentlayout.widget.PercentFrameLayout>