<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_from_album"
            android:layout_marginTop="@dimen/sp_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/album"
            android:textColor="@color/color_298"
            />

        <TextView
            android:id="@+id/take_photo"
            android:layout_marginTop="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_298"
            android:text="@string/take_photo" />

        <TextView
            android:id="@+id/photo_cancel"
            android:layout_marginTop="@dimen/sp_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_298"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>