<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/man"
            android:layout_marginTop="@dimen/sp_30"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/sp_5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/man"
            android:textColor="@color/color_298"
            />

        <TextView
            android:id="@+id/woman"
            android:layout_marginTop="@dimen/sp_16"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/sp_5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_298"
            android:text="@string/woman" />

        <TextView
            android:id="@+id/cancel"
            android:layout_marginTop="@dimen/sp_14"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/sp_5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_298"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>