<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/color_999"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/edit_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/cancel"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_14"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/input_username"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_14"
            />
        <Button
            android:id="@+id/edit_finish"
            android:layout_width="66dp"
            android:layout_height="40dp"
            android:text="@string/finish"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="@dimen/dp_14"
        android:background="@drawable/btn_shape_20"
        >
    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_14"
        android:textColor="@color/black"
        android:hint="@string/please_input"
        android:paddingLeft="@dimen/dp_14"
        android:paddingTop="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:gravity="top"
        android:textColorHint="@color/color_999"
        />
        <TextView
            android:id="@+id/max_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:layout_margin="@dimen/dp_14"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/color_999"
            android:textSize="@dimen/dp_14"

            />
    </RelativeLayout>
</LinearLayout>