<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    app:cardCornerRadius="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">
        <ImageView
            android:id="@+id/video_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:id="@+id/video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_14"
                android:textColor="@color/black"
                android:text="@string/beautiful_scenes"
                android:lines="1"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_above="@+id/video_play_times"
                android:drawablePadding="@dimen/dp_5"/>

            <TextView
                android:id="@+id/video_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_14"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/like"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_14"
                app:drawableLeftCompat="@mipmap/like" />

            <TextView
                android:id="@+id/video_tag_ll"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_14"
                android:drawablePadding="@dimen/dp_5"
                android:layout_toEndOf="@+id/video_play_times"
                android:layout_alignParentBottom="true"
                android:text="@string/tag"
                android:textColor="@color/tabBottomTintColor"
                android:textSize="@dimen/dp_14"
              />



            <TextView
                android:id="@+id/video_play_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginEnd="@dimen/dp_14"
                android:layout_marginBottom="@dimen/dp_14"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/play_times"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_14"
                app:drawableStartCompat="@mipmap/see" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
