<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.NativeLoginActivity">
    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/color_white"

      >
        <com.wsy.common.ui.view.IconFontTextView
            android:id="@+id/action_back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/knowledge"
            android:textSize="@dimen/sp_24">

        </com.wsy.common.ui.view.IconFontTextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/color_000"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:id="@+id/action_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_6"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/title_register"
            android:textColor="@color/color_298"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        >
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_d1d2" />
</RelativeLayout>

    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/view"
        >

        <TextView
            android:id="@+id/item_username"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:background="@color/white"
            android:gravity="center"
            android:text="用户:"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/input_item_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_toRightOf="@+id/item_username"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:maxLength="10"
            android:minLines="1"
            android:hint="请输入用户名"
            android:text="person22"
            android:textColor="#757575" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/username">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_d1d2" />
</RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_centerInParent="true"
        android:layout_below="@+id/view2">

        <TextView
            android:id="@+id/item_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="密码:"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/input_item_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_toRightOf="@+id/item_password"
            android:background="@color/white"
            android:inputType="textPassword"
            android:maxLength="20"
            android:minLines="1"
            android:text="Np@18030909"
            android:paddingLeft="10dp"
            android:hint="请输入密码"
            android:textColor="#757575" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d1d2" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/view3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@color/color_dd2"
            app:cornerRadius="@dimen/dp_6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tips"
        android:layout_below="@+id/button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/login_desc_forget_pwd"
            android:textAlignment="center"
            android:textColor="@color/color_646"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>